* heavily improved TV.com Client (better results, 2x - 4x faster) * improved EpisodeListClient API * unittests